<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.10">
  <DUT Name="ST_FloatRange" Id="{1f80bb08-781a-48e2-acda-4efa0ec2a072}">
    <Declaration><![CDATA[TYPE ST_FloatRange :
STRUCT
    fLow  : REAL;
    fHigh : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>