<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL" Id="{14f7e4c4-1971-4a0b-b8fc-55754218cf88}">
    <Declaration><![CDATA[VAR_GLOBAL
    (* Fault Handling *)
    //////////////////////////////////
    bHEARTBEATALIVE     : BOOL;  // [Active] Whether heartbeat has updated
    bFAULT    AT %Q*    : BOOL;  // [Active] Whether Lens Interlock has tripped
    bTRIP_MPS AT %Q*    : BOOL;  // [Active] Bit output to MPS (trip when LOW)
    q_bLimitSummaryFault: BOOL;  // [Active] Whether limit has been violated
    bStateFault	        : BOOL;  // [Active] Whether lens is in an unknown state
	
    //Fault Latches
	q_bFaultLatch  						: BOOL; // Latch: summary for *any* fault
    q_bStateLatch 						: BOOL;	// Latch: motor state/position unknown 
    q_bLimitSummaryFaultLatch    		: BOOL; // Latch: Summary fault due to energy/lens combination [active]
	q_bTableLimitFaultLatch 			: BOOL;	// Latch: Table disallowed range match
    q_bMinEnergyFaultLatch 				: BOOL; // Latch: Minimum energy not met
    q_bRequiresTransfocatorFaultLatch 	: BOOL; // Latch: Transfocator lens required to be inserted
    i_xFAULT_CLEAR    					: BOOL;  //Clear fault bit

    (*Lens Information *)
    ////////////////////////////////
    XRT_LENSES : ARRAY[1..10] OF LENS; //Set of XRT Lenses
    TFS_LENSES : ARRAY[1..10] OF LENS; //Set of TFS Lenses
    XRT_RADIUS : REAL; //Current Radius of XRT lenses
    TFS_RADIUS : REAL; //Current Radius of TFS lenses

    (* Effective radius trip regions - per XRT lens configuration *)
    ////////////////////////////////////////////////////////////////
    NO_LENS_LIMIT : RADII_LIMIT;
    LENS1_LIMIT : RADII_LIMIT;
    LENS2_LIMIT : RADII_LIMIT;
    LENS3_LIMIT : RADII_LIMIT;	
	
	(* Feedback to the IOC *)
    q_stActiveLimit : RADII_LIMIT;
	
	(* Current faults *)
    bTableLimitFault : BOOL;
    bMinEnergyFault : BOOL;
    bRequiresTransfocatorFault : BOOL;

	
    fMinEnergies : ARRAY[0..3] OF LREAL;
    afbRequiresLensEnergyRange : ARRAY[0..3] OF ST_FloatRange;

    (* Heartbeat *)
    ////////////////////////////////
    i_xIOC_HEARTBEAT: BOOL; //Current status of heartbeat
    i_fPhotonEnergy : REAL; // Current photon energy (keep REAL for modbus compatibility)

    (* Modbus *)
    ///////////////////////////////
    LOTO_Override: BOOL := TRUE;
    /// test mb_Input_Coils[0] with "modpoll -r 32769 -t 1 127.0.0.1"
    mb_Input_Coils: ARRAY[0..255] OF BOOL;
    /// test mb_Output_Coils[0] with "modpoll -r 32769 -t 0 127.0.0.1"
    mb_Output_Coils: ARRAY[0..255] OF BOOL;
    /// test mb_Input_Registers[0] with "modpoll -r 32769 -t 3 127.0.0.1"
    mb_Input_Registers: ARRAY[0..255] OF WORD;
    /// test mb_Output_Registers[0] with "modpoll -r 32769 -t 4 127.0.0.1"
    mb_Output_Registers: ARRAY[0..255] OF WORD;
    /// test mb_PLC_Memory[0] with "modpoll -r 12289 -t 4 127.0.0.1"
    mb_PLC_Memory AT %MW0: ARRAY[0..1000] OF WORD;
	iCycleCount : WORD;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>